--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
         <h5 class="option">Blog</h5>
       </div>
       <div class="download-button">
-        <button class="btn-download">Download</button>
+        <a href="https://pahamify.com/download/" target="_blank"
+          ><button class="btn-download">Download</button></a
+        >
       </div>
     </section>
     <!-- navbar section end -->
@@ -46,7 +48,9 @@
           Bikin belajar jadi paham dan buktikan keseruannya. <br />
           <span class="hero-description-yellow">#TenangAjaAdaPahamify</span>
         </h5>
-        <button class="btn-download-yellow">Download Gratis Sekarang</button>
+        <a href="https://link.pahamify.com/pfy-home" target="_blank"
+          ><button class="btn-download-yellow">Download Gratis Sekarang</button>
+        </a>
       </div>
 
       <div class="hero-right">
@@ -106,5 +110,259 @@
       </div>
     </section>
     <!-- about pahamify section end -->
+
+    <!-- profile section start -->
+    <section class="profile-section">
+      <div class="profile-details">
+        <div class="profile-content">
+          <img classs="profile-image" src="profile1.png" alt="profil1" />
+          <h2 class="first">1 juta+</h2>
+          <h5 class="first">Pelajar Indonesia</h5>
+          <p>yang sudah download aplikasi Pahamify</p>
+        </div>
+        <div class="profile-content">
+          <img classs="profile-image" src="profil2.png" alt="profil1" />
+          <h2 class="second">20.000+</h2>
+          <h5 class="second">Jumlah Konten</h5>
+          <p>pembelajaran terbaru dan sesuai kurikulum</p>
+        </div>
+        <div class="profile-content">
+          <img classs="profile-image" src="profil3.png" alt="profil1" />
+          <h2 class="third">8/10</h2>
+          <h5 class="third">Peserta</h5>
+          <p>Tryout Pahamify terbukti lolos PTN impian</p>
+        </div>
+        <div class="profile-content">
+          <img classs="profile-image" src="profil4.png" alt="profil1" />
+          <h2 class="fourth">96%</h2>
+          <h5 class="fourth">Pelajar</h5>
+          <p>merasa terbantu dengan Video Belajar</p>
+        </div>
+      </div>
+
+      <div class="profil-testimoni">
+        <h2>Apa Kata Mereka?</h2>
+        <p>Pengalaman Pahamifren yang Sudah Belajar Konsep di Pahamify</p>
+        <div class="testimoni-details">
+          <div class="profil-testimoni-content">
+            <div class="header-testimoni">
+              <img src="pptestimoni1.jpg" alt="pptestimoni1" />
+              <h3>Nabila Wardani</h3>
+            </div>
+            <p>
+              Sangat membantu sekali dalam belajar, mudah videonya, ada
+              flashcard serta rangkumannya juga
+            </p>
+          </div>
+          <div class="profil-testimoni-content">
+            <div class="header-testimoni">
+              <img src="pptestimoni2.jpg" alt="pptestimoni1" />
+              <h3>Ahya Silmi H</h3>
+            </div>
+            <p>
+              Worth it banget buat pelajar, mudah dipahami. metode pembelajaran
+              pake quiz sama flashcardnya juga asik banget
+            </p>
+          </div>
+          <div class="profil-testimoni-content">
+            <div class="header-testimoni">
+              <img src="pptestimoni3.jpg" alt="pptestimoni1" />
+              <h3>Wahyu Adipratama</h3>
+            </div>
+            <p>
+              Belajar di Pahamify seru, dan juga harga langganannya nggak
+              terlalu mahal
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- profile section end -->
+
+    <!-- teacher section start -->
+    <section class="teacher-section">
+      <h2>Rockstar Teacher Pahamify</h2>
+      <h5>
+        Lebih seru belajar bareng Rockstar Teacher Pahamify. <br />Yuk Kenalan
+        sama mereka!
+      </h5>
+      <div class="teacher-details">
+        <div class="teacher-container">
+          <div class="teacher-header">
+            <img src="teacher1.png" alt="teacher1" />
+            <div class="teacher-details-header">
+              <h3>Fitriana Ferhadija</h3>
+              <h4>Rockstar Teacher Bahasa Indonesia</h4>
+              <h5>Universitas Indonesia</h5>
+            </div>
+          </div>
+          <div class="teacher-body">
+            <ul>
+              <li>
+                Juara 1 Lomba Berbalas Pantun, La Sastra SMAN 5 Bogor (2012)
+              </li>
+              <li>
+                Pembicara pararel International Conference on Language & Arts,
+                Universitas Padang(2017)
+              </li>
+              <li>
+                Pembicara Pararel International Young Scholars Symposium on
+                Humanities & Arts. Universitas Indonesia(2017)
+              </li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="teacher-container">
+          <div class="teacher-header">
+            <img src="teacher2.png" alt="teacher1" />
+            <div class="teacher-details-header">
+              <h3>Arini Soesatyo Putri</h3>
+              <h4>Rockstar Teacher Matematika</h4>
+              <h5>Institut Teknologi Bandung</h5>
+            </div>
+          </div>
+          <div class="teacher-body">
+            <ul>
+              <li>The Highest Grade in Mathematics Major, 2016</li>
+              <li>
+                Bronze Medal, Mathematical Analysis and Geometry Day ITB, 2015
+              </li>
+              <li>
+                Juara 2 Olimpiade Kalkulus, Universitas Islam Negeri Gunung
+                Djati Bandung 2013
+              </li>
+              <li>Participant, MYSAGA Institut Teknologi Bandung, 2019</li>
+              <li>
+                Mentor, Mathematical Analysis and Geometry DAy Institut
+                Teknologi Bandung, 2017
+              </li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="teacher-container">
+          <div class="teacher-header">
+            <img src="teacher3.png" alt="teacher1" />
+            <div class="teacher-details-header">
+              <h3>Fitriana Ferhadija</h3>
+              <h4>Rockstar Teacher Bahasa Indonesia</h4>
+              <h5>Universitas Indonesia</h5>
+            </div>
+          </div>
+          <div class="teacher-body">
+            <ul>
+              <li>
+                Juara 1 Lomba Berbalas Pantun, La Sastra SMAN 5 Bogor (2012)
+              </li>
+              <li>
+                Pembicara pararel International Conference on Language & Arts,
+                Universitas Padang(2017)
+              </li>
+              <li>
+                Pembicara Pararel International Young Scholars Symposium on
+                Humanities & Arts. Universitas Indonesia(2017)
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- teacher section end -->
+
+    <!-- footer start -->
+    <footer>
+      <div class="pahamify-text">
+        <h3>Pahamify – Bimbel Online Terbaik di Indonesia</h3>
+        <p>
+          Pahamify adalah penyedia layanan bimbel online terbaik melalui
+          aplikasi belajar online yang dapat diakses kapan saja dan dari mana
+          saja melalui hp, tablet, laptop, dan komputer. Pahamify menyediakan
+          konten pembelajaran dengan konsep yang menyenangkan, kelas belajar
+          online yang aplikatif dan inovatif, serta video belajar beranimasi
+          yang informatif dan edukatif. Pahamify juga menyediakan platform
+          persiapan ujian modern yang mempersiapkan siswa untuk ujian masuk
+          perguruan tinggi negeri melalui jalur SNMPTN, UTB SBMPTN, maupun ujian
+          mandiri. Melalui Pahamify, siswa bisa melatih diri dan mendapatkan
+          feedback terhadap kelemahan dan kekurangan mereka dalam menghadapi
+          ujian.
+        </p>
+      </div>
+
+      <div class="pahamify-footer">
+        <div class="download-pahamify">
+          <img src="pahamify-white-logo.svg" alt="" />
+          <h4>Mobile Version</h4>
+          <div class="mobile-download">
+            <a
+              href="https://play.google.com/store/apps/details?id=com.pahamify.android"
+              target="_blank"
+              ><img src="googleplay.svg" alt=""
+            /></a>
+            <a
+              href="https://apps.apple.com/id/app/pahamify-taklukkan-utbk/id1472136176"
+              target="_blank"
+              ><img src="appstore.svg" alt=""
+            /></a>
+          </div>
+          <h4>Desktop Version</h4>
+          <div class="desktop-download">
+            <a
+              href="https://storage.pahamify.com/DesktopVersion/win/PahamifyDesktop-win-0.2.5.exe"
+              target="_blank"
+            >
+              <img src="icon-desktop-windows.png" alt="" />
+            </a>
+            <a
+              href="https://storage.pahamify.com/DesktopVersion/mac/PahamifyDesktop-mac-0.2.5.dmg"
+              target="_blank"
+            >
+              <img src="icon-desktop-macs.png" alt="" />
+            </a>
+          </div>
+          <a
+            href="https://pahamify.com/blog/artikel/cara-instalasi-pahamify-desktop-version/"
+            >Cara Instalasi?</a
+          >
+        </div>
+
+        <div class="footer-content">
+          <h3>Perusahaan</h3>
+          <h5>Tentang Kami</h5>
+          <h5>Karir</h5>
+          <h5>Pahamitra</h5>
+        </div>
+
+        <div class="footer-content">
+          <h3>Panduan</h3>
+          <h5>SNBP</h5>
+          <h5>SNBT</h5>
+          <h5>UTBK</h5>
+        </div>
+
+        <div class="footer-content">
+          <h3>Hak Cipta</h3>
+          <h5>Privacy Policy</h5>
+          <h5>Syarat & Ketentuan</h5>
+        </div>
+
+        <div class="footer-content">
+          <h3>Ikuti Kami</h3>
+          <h5>Facebook</h5>
+          <h5>Instagram</h5>
+          <h5>Twitter</h5>
+          <h5>Youtube</h5>
+          <h5>Linkedin</h5>
+        </div>
+
+        <div class="footer-content">
+          <h3>Kontak Kami</h3>
+          <h5>Whatsapp</h5>
+          <h5>cs@pahamify.com</h5>
+        </div>
+      </div>
+    </footer>
+
+    <!-- footer end -->
   </body>
 </html>
