--- a/index.html
+++ b/index.html
@@ -328,39 +328,79 @@
 
         <div class="footer-content">
           <h3>Perusahaan</h3>
-          <h5>Tentang Kami</h5>
-          <h5>Karir</h5>
-          <h5>Pahamitra</h5>
+          <a href="https://pahamify.com/about-us/" target="_blank">
+            <h5>Tentang Kami</h5>
+          </a>
+          <a href="https://pahamify.com/career-home/" target="_blank">
+            <h5>Karir</h5>
+          </a>
+          <a href="https://pahamify.com/pahamitra/" target="_blank">
+            <h5>Pahamitra</h5>
+          </a>
         </div>
 
         <div class="footer-content">
           <h3>Panduan</h3>
-          <h5>SNBP</h5>
-          <h5>SNBT</h5>
-          <h5>UTBK</h5>
+          <a href="https://snmptn.pahamify.com/" target="_blank">
+            <h5>SNBP</h5>
+          </a>
+          <a href="https://sbmptn.pahamify.com/" target="_blank">
+            <h5>SNBT</h5>
+          </a>
+          <a href="https://utbk.pahamify.com/" target="_blank">
+            <h5>UTBK</h5>
+          </a>
         </div>
 
         <div class="footer-content">
           <h3>Hak Cipta</h3>
-          <h5>Privacy Policy</h5>
-          <h5>Syarat & Ketentuan</h5>
+          <a href="https://pahamify.com/privacy-policy/" target="_blank">
+            <h5>Privacy Policy</h5>
+          </a>
+
+          <a href="https://pahamify.com/syarat-dan-ketentuan/" target="_blank">
+            <h5>Syarat & Ketentuan</h5>
+          </a>
         </div>
 
         <div class="footer-content">
           <h3>Ikuti Kami</h3>
-          <h5>Facebook</h5>
-          <h5>Instagram</h5>
-          <h5>Twitter</h5>
-          <h5>Youtube</h5>
-          <h5>Linkedin</h5>
+          <a href="https://www.facebook.com/pahamify" target="_blank">
+            <h5>Facebook</h5>
+          </a>
+          <a href="https://www.instagram.com/pahamify/" target="_blank">
+            <h5>Instagram</h5>
+          </a>
+          <a href="https://twitter.com/pahamify" target="_blank">
+            <h5>Twitter</h5>
+          </a>
+          <a
+            href="https://www.youtube.com/channel/UCLqm01FGZPRfrSfY1tUd6Ag"
+            target="_blank"
+          >
+            <h5>Youtube</h5>
+          </a>
+          <a href="https://www.linkedin.com/company/pahamify/" target="_blank">
+            <h5>Linkedin</h5>
+          </a>
+          <a href="https://www.tiktok.com/@pahamify" target="_blank"
+            ><h5>Tik Tok</h5></a
+          >
         </div>
 
         <div class="footer-content">
           <h3>Kontak Kami</h3>
-          <h5>Whatsapp</h5>
-          <h5>cs@pahamify.com</h5>
+          <a href="https://wa.me/6281384126247" target="_blank">
+            <h5>Whatsapp</h5>
+          </a>
+          <a href="cs@pahamify.com" target="_blank">
+            <h5>cs@pahamify.com</h5>
+          </a>
         </div>
       </div>
+      <p class="copyright">
+        &copy; Clone By <span>TunggulAlMajid</span>. Just Learn Web Programming
+      </p>
     </footer>
 
     <!-- footer end -->
